prevent stages triggering independantly, use pipeline.yml

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,7 +6,10 @@ on:
       tag:
         description: "The generated tag version"
         value: ${{ jobs.tag.outputs.tag }}
-
+  push: # prevents triggering it independently, use pipeline.yml
+    branches-ignore:
+      - '**'
+  
 jobs:
   tag:
     runs-on: ubuntu-latest
