--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
         description: "Tag from the tag stage"
         required: true
         type: string
+  push: # prevents triggering it independently, use pipeline.yml
+    branches-ignore:
+      - '**'
 
 jobs:
   release:
