--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-name: Build Workflow
+name: Workflow Build
 
 on:
   workflow_call:
     inputs:
       tag:
-        description: "Tag from the tag stage"
+        description: "Tag from the workflow tag"
         required: true
         type: string
   push: # prevents triggering it independently, use pipeline.yml
