--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,8 +12,12 @@ jobs:
     name: Workflow Build
     needs: tag # depends on the Workflow Tag
     uses: ./.github/workflows/build.yml
+    with:
+      tag: ${{ needs.tag.outputs.tag }} # Pass tag output to Build Stage
 
   release:
     name: Workflow Release
     needs: build # depends on the Workflow Build
     uses: ./.github/workflows/release.yml
+    with:
+      tag: ${{ needs.tag.outputs.tag }} # Pass tag output to Release Stage
