--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,8 @@
-# Basic dependabot.yml file 
+# Please see the documentation for all configuration options:
+# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 version: 2
 updates:
-  # Enable version updates for github-actions
   - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-  # Enable version updates for Docker
-  - package-ecosystem: "docker"
-    # Look for a `Dockerfile` in the `root` directory
     directory: "/"
     schedule:
       interval: "weekly"
